<resources>
    <string name="app_name" translatable="false">Berqarat</string>
    <string name="explore_popular_categories">Explore Popular Categories</string>
    <string name="pick_of_the_day">Chosen for you</string>
    <string name="search">Search</string>
    <string name="see_more">See More</string>

    <string name="create_account">
		<font fgcolor='#000000'>Create</font>
        <font fgcolor='#E02181'> Account</font>
	</string>
    <string name="sign_up">Sign Up</string>
    <string name="register"> Register</string>
    <string name="already_have_an_account">Already have an account?\t\t</string>

    <string name="welcome_back">
		<font fgcolor='#000000'>Welcome</font>
        <font fgcolor='#E02181'> Back</font>
	</string>
    <string name="login">"Login "</string>
    <string name="does_not_have_an_account">Doesn\'t have an account?\t\t</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>

    <string name="add_new_product">Add New Product</string>
    <string name="product_photo">Product photo</string>
    <string name="add_product_photo">Add product photo</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product Description</string>
    <string name="category">Category</string>

    <string name="product_details">Product Details</string>
    <string name="example_descript" translatable="false">A red rose, a symbol of passionate love, captivates with its velvety petals and rich crimson hue. The graceful bloom unfolds in layers, revealing a timeless elegance. Its intoxicating fragrance evokes romance, while thorns speak of love\'s delicate balance. A symbol of beauty and desire, the red rose embodies the essence of heartfelt emotions in a mere glance.</string>
    <string name="length">Length</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="select_language">Select Language</string>
    <string name="colors_optional">Colors (Optional)</string>
    <string name="add_color">Add Color</string>
    <string name="lengths_optional">Lengths (Optional)</string>
    <string name="add_length">Add Length</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="notifications">Notifications</string>
    <string name="edit_personal_details">Edit Account</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="oops">OOPS!!</string>
    <string name="settings">Settings</string>
    <string name="please_wait">Please wait..</string>
    <string name="uploading">Uploading..</string>
    <string name="product_name_can_t_be_empty">Product name can\'t be empty.</string>
    <string name="you_must_select_product_category">You must select product category.</string>
    <string name="product_price_can_t_be_empty">Product price can\'t be empty.</string>
    <string name="invalid_price_format">Invalid price format.</string>
    <string name="product_price_can_t_be_less_than_zero">Product price can\'t be less than zero.</string>
    <string name="you_must_select_product_photo">You must select product photo.</string>
    <string name="failed_to_upload_photo">"Failed to upload photo: "</string>
    <string name="failed_to_upload_product">"Failed to upload product: "</string>
    <string name="payments">Payments</string>
    <string name="favorites">Favorites</string>
    <string name="cancel">Cancel</string>
    <string name="general">General</string>
    <string name="continue_with_facebook">Continue with FaceBook</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="forgot_password">
		<font fgcolor='#000000'>Forgot</font>
        <font fgcolor='#E02181'> Password</font>
	</string>
    <string name="forgot_password_info">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="send">Send</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_must_be_at_least_8_characters_long">Password must be at least 8 characters long</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="notification">Notification</string>
    <string name="no_notifications">No Notification yet</string>
    <string name="email_or_password_is_incorrect">Email or Password is incorrect</string>
    <string name="no_exact_matches_found">No exact matches found</string>
    <string name="filters">Filters</string>
    <string name="sort_by">Sort By</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="please_enter_the_verification_code_sent_to_n">Please enter the verification code sent to\n</string>
    <string name="verify_account">Verify Account</string>
    <string name="location">Location</string>
    <string name="you_must_enter_product_details">You must enter product details</string>
    <string name="you_must_select_product_location">You must select product location</string>
    <string name="berq" translatable="false">BERQ</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="my_cart">My Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="total">Summary</string>
    <string name="order_now">Order Now</string>
    <string name="transactions">Transactions</string>
    <string name="ads">Ads</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="moderation_of_ads">Moderation Of Ads</string>
    <string name="contact_information">Contact Information</string>
    <string name="upload">Upload</string>
    <string name="professional_acc_info">Advanced Features and capabilities for professional users. Your ads will always be on the main page</string>
    <string name="individaul_info">All the necessary and essential functions for working with ads</string>
    <string name="my_profile">My Profile</string>
    <string name="save">SAVE</string>
    <string name="profile">Profile</string>
    <string name="your_name">Your Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="select_delivery_address">Select Delivery address</string>
    <string name="send_reset_password_email">Send Reset Password To Email</string>
    <string name="account_type">Account Type</string>
    <string name="individual">Individual</string>
    <string name="professional">Professional</string>
    <string name="professional_price">5000 Դ per month</string>
    <string name="password_reset_email_sent_successfully">Password Reset Email Sent Successfully</string>
    <string name="my_ads">My Ads</string>
    <string name="you_haven_t_ads_yet">You haven\'t ads yet</string>
    <string name="quantity">Quantity</string>
    <string name="available_count">In one (qty.)</string>
    <string name="min_purchase_count">Available (qty.)</string>
    <string name="phone_number">Phone number</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="clear_all">Clear All</string>
    <string name="mark_as_read">Mark As Read</string>
    <string name="confirm_products">Confirm Products</string>
    <string name="disprove">Disprove</string>
    <string name="approve">Approve</string>
    <string name="admin">Admin</string>
    <string name="house_plants">House Plants</string>
    <string name="roses"> Roses</string>
    <string name="flowers"> Flowers</string>
    <string name="outdoor_plants">Outdoor Plants</string>
    <string name="lilies"> Lilies</string>
    <string name="_100_off_special_delivery_in_april">100% off special \ndelivery in June</string>
    <string name="plants">Plants</string>
    <string name="special_offer_second">Buy 100+ roses \nand get free \ndelivery</string>
    <string name="confirm_your_order">Confirm Order</string>
    <string name="sub_total">Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="delivery_to">Delivery to</string>
    <string name="go_to_home">Go To Home</string>
    <string name="you_must_select_delivery_address">You must select delivery address</string>
    <string name="item_added_to_cart_successfully">Product added to cart successfully</string>
    <string name="on_the_way">On The Way</string>
    <string name="delivered">Delivered</string>
    <string name="assign_to_me">Assign To Me</string>
    <string name="driver">Driver</string>
    <string name="my_orders">Assign To Me</string>
    <string name="orders">Orders</string>
    <string name="assigned">Assigned</string>
    <string name="driver_1">Driver 1</string>
    <string name="driver_2">Driver 2</string>
    <string name="driver_3">Driver 3</string>
    <string name="your_review">Your Review</string>
    <string name="please_share_your_opinion_nabout_the_product">Please share your opinion \nabout the product</string>
    <string name="please_share_your_opinion_nabout_the_product2">Please share your opinion about the product</string>
    <string name="send_review">Send review</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="select_driver">Select Driver</string>
    <string name="rating_and_reviews">Rating and reviews</string>
    <string name="the_user_has_not_received_any_reviews_yet" translatable="false">The user has not received any reviews yet</string>
    <string name="reviews">reviews</string>
    <string name="you_must_write_review_and_add_rating">You must write review and add rating</string>
    <string name="price_highest_to_low">Price: highest to low</string>
    <string name="newly_listed">Newly listed</string>
    <string name="price_lowest_to_high">Price: lowest to high</string>
    <string name="best_match">Best Match</string>
    <string name="sort">Sort</string>
    <string name="select">Select</string>
    <string name="minimum_purchase_count_is">"Minimum purchase count is "</string>
</resources>